From Bombay to Dave Baby

--- a/recipe.html
+++ b/recipe.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Bombay</title>
+    <title>Recipe</title>
   </head>
   <body>
-    <ul id="recipeLinks"></ul>
-    <script src="main.js"></script>
+    <a href="index.html">Go back home</a>
+    <div id="container"></div>
+    <script src="recipe.js"></script>
   </body>
 </html>
