--- a/index.html
+++ b/index.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="/csss/styles-main.css" />
     <title>Bombay</title>
   </head>
   <body>
-    <ul id="recipeLinks"></ul>
+    <div class="wrapper">
+      <header>
+        <h1 class="heading">Bombay Grill</h1>
+      </header>
+      <section>
+        <ul class="listItems" id="recipeLinks"></ul>
+      </section>
+    </div>
+
     <script src="main.js"></script>
   </body>
 </html>
