--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   </head>
   <body>
     <div class="wrapper">
-      <header>
-        <h1 class="heading">Bombay Grill</h1>
-      </header>
-      <section>
+      <h1 class="heading">Bombay Grill</h1>
+    </div>
+    <div class="wrapperTwo">
+      <div class="card">
         <ul class="listItems" id="recipeLinks"></ul>
-      </section>
+      </div>
     </div>
 
     <script src="main.js"></script>
