--- a/recipe.html
+++ b/recipe.html
@@ -4,11 +4,35 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="/csss/recipe.css" />
     <title>Recipe</title>
   </head>
   <body>
-    <a href="index.html">Go back home</a>
     <div id="container"></div>
+    <div class="wrapper">
+      <header>
+        <h1>Butter Chicken</h1>
+      </header>
+      <steps>
+        <div class="step1">
+          <h2>Step Number 1</h2>
+          <h3>Tomato Sauce base</h3>
+          <div class="card">
+            <div class="ingredient">
+              <h3>Ingredient</h3>
+              <div>
+                <ul>
+                  <li>Put in <span>2qt</span> of Tomato Sauce</li>
+                  <li>Put in <span>2qt</span> of Tomato Sauce</li>
+                  <li>Put in <span>2qt</span> of Tomato Sauce</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </steps>
+      <a href="index.html">Go back home</a>
+    </div>
     <script src="recipe.js"></script>
   </body>
 </html>
