--- a/recipe.html
+++ b/recipe.html
@@ -8,31 +8,25 @@
     <title>Recipe</title>
   </head>
   <body>
-    <div id="container"></div>
-    <div class="wrapper">
+    <div class="container">
       <header>
         <h1>Butter Chicken</h1>
       </header>
-      <steps>
-        <div class="step1">
-          <h2>Step Number 1</h2>
-          <h3>Tomato Sauce base</h3>
-          <div class="card">
-            <div class="ingredient">
-              <h3>Ingredient</h3>
-              <div>
-                <ul>
-                  <li>Put in <span>2qt</span> of Tomato Sauce</li>
-                  <li>Put in <span>2qt</span> of Tomato Sauce</li>
-                  <li>Put in <span>2qt</span> of Tomato Sauce</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-      </steps>
+      <div class="step">
+        <h2>Step Number 1</h2>
+        <h4>Tomato Sauce base</h4>
+      </div>
+      <div class="ingredient">
+        <h4>Ingredient</h4>
+      </div>
+      <ul class="ingredient-list">
+        <li>Put something in here</li>
+        <li>Put something in here</li>
+        <li>Put something in here</li>
+      </ul>
       <a href="index.html">Go back home</a>
     </div>
+    <div id="container"></div>
     <script src="recipe.js"></script>
   </body>
 </html>
