--- a/recipe.html
+++ b/recipe.html
@@ -9,57 +9,7 @@
   </head>
   <body>
     <div id="container">
-      <div class="wrapper card">
-        <header>
-          <h1>Butter-Chicken</h1>
-        </header>
-        <div class="step">
-          <h2>Step Number 1</h2>
-          <h4>Tomato Sauce base</h4>
-        </div>
-        <div class="ingredient">
-          <h4>Ingredient</h4>
-        </div>
-        <div class="ingredient-list">
-          <div>
-            <ul>
-              <li><span>1</span>adada</li>
-              <li><span>1</span>adada</li>
-              <li><span>1</span>adada</li>
-            </ul>
-          </div>
-        </div>
-        <div class="instructions">
-          <div class=""><h4>Instructions</h4></div>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-            Voluptatem, necessitatibus hic! Minus iure culpa similique optio
-            totam, numquam voluptate nam tempore cumque iste beatae, repudiandae
-            fugiat aspernatur! Id esse quibusdam eius deleniti ipsa ipsam vel
-            illo tempora quisquam natus. Consequatur quod aperiam quos obcaecati
-            deleniti, neque voluptatibus id. Mollitia, quaerat!
-          </p>
-        </div>
-        <div>
-          <div class="gallery">
-            <h4>Image</h4>
-            <img src="" alt="" />
-          </div>
-          <div class="video">
-            <h4>Video</h4>
-            <video width="320" height="240" controls>
-              <source src="/video/" type="video/mp4" />
-            </video>
-          </div>
-          <div class="tool">
-            <h4>Tools</h4>
-            <img src="" alt="" />
-          </div>
-        </div>
-        <div class="linkbox">
-          <a class="link" href="index.html">Back Home</a>
-        </div>
-      </div>
+      <div id="steps-Container"></div>
     </div>
 
     <script src="recipe.js"></script>
