--- a/recipe.html
+++ b/recipe.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div id="container">
+      <h1 id="heading">Loading...</h1>
       <div id="steps-Container"></div>
     </div>
     <div class="linkbox">
